# BrainAtlas

./: .gitignore  README.md
Assets/: DefaultVolumeProfile.asset  URPRendererAsset.asset  URPRendererAsset_Renderer.asset  UniversalRenderPipelineGlobalSettings.asset
Assets/AddressableAssets/AllenCCF/: ontology_structure_minimal.csv
Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
Assets/AddressableAssetsData/AssetGroupTemplates/: Packed Assets.asset
Assets/AddressableAssetsData/AssetGroups/: AllenCCF.asset  AnnotationDataset.asset  AnnotationDatasetTexture.asset  Built In Data.asset  Default Local Group.asset  allen_human_500um.asset  allen_mouse_100um.asset  allen_mouse_10um.asset  allen_mouse_25um.asset  allen_mouse_50um.asset  allen_mouse_bluebrain_barrels_25um.asset  azba_zfish_4um.asset  azba_zfish_8um.asset  default.asset  osten_mouse_100um.asset  prairie_vole_25um.asset  princeton_mouse_20um.asset  sju_cavefish_2um.asset  (+3 more)
Assets/Materials/: NullMaterial.mat
Assets/RenderTextures/: AxialRenderTexture.renderTexture
Assets/Scenes/: MainScene.unity  SampleScene.unity
Assets/Scripts/: TestAssetLoading.cs  Texture3DAlpha.cs  TextureAssetBuilder.cs
Pipelines/: README.md  conversion.ipynb  convert_to_one_sided.blend1  pipeline.ipynb  requirements.txt  test_conversion.ipynb  waxholm_acronyms.csv  waxholm_acronyms_CCF.csv
Pipelines/brainatlas2unity/: LICENSE.txt  README.md  pyproject.toml
Pipelines/brainatlas2unity/src/brainatlas2unity/: __about__.py  __init__.py  conversion.py
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset
ServerData/StandaloneOSX/: catalog_2022.04.12.17.19.41.hash  catalog_2022.04.12.17.19.41.json  catalog_2022.04.13.05.10.02.hash  catalog_2022.04.13.05.10.02.json
ServerData/StandaloneWindows64/: catalog_2022.04.13.05.11.10.hash  catalog_2022.04.13.05.11.10.json
ServerData/WebGL/: catalog_2022.04.13.05.13.52.hash  catalog_2022.04.13.05.13.52.json
UserSettings/: EditorUserSettings.asset
UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2021.dwlt  default-6000.dwlt
(+6770 files in other folders)
